--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./App.js",
     "dev": "npm start",
@@ -15,8 +16,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^2.6.11",
+    "nodemon": "^2.0.22"
   }
 }
